--- a/RuyiLogger/RuyiLogger.csproj
+++ b/RuyiLogger/RuyiLogger.csproj
@@ -4,7 +4,7 @@
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <Platforms>AnyCPU;x64</Platforms>
-    <Configurations>Debug;Release;Internal_Release</Configurations>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
