--- a/SDK.Base/SDK.Base.csproj
+++ b/SDK.Base/SDK.Base.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <Configurations>Debug;Release;Internal_Release</Configurations>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\externals\thrift0.10.0\Thrift.ns2.0.csproj" />
