--- a/RuyiSDK.nf2.0/RuyiSDK.nf2.0.csproj
+++ b/RuyiSDK.nf2.0/RuyiSDK.nf2.0.csproj
@@ -60,6 +60,9 @@
     <Compile Include="..\RuyiSDK\RuyiNet\Request\RuyiNetProfileIdRequest.cs">
       <Link>RuyiNet\Request\RuyiNetProfileIdRequest.cs</Link>
     </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Response\RuyiNetGetGameManifestResponse.cs">
+      <Link>RuyiNet\Response\RuyiNetGetGameManifestResponse.cs</Link>
+    </Compile>
     <Compile Include="..\RuyiSDK\RuyiNet\Response\RuyiNetGetProfileResponse.cs">
       <Link>RuyiNet\Response\RuyiNetGetProfileResponse.cs</Link>
     </Compile>
@@ -90,6 +93,9 @@
     <Compile Include="..\RuyiSDK\RuyiNet\Service\RuyiNetFriendService.cs">
       <Link>RuyiNet\Service\RuyiNetFriendService.cs</Link>
     </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\RuyiNetGameManifest.cs">
+      <Link>RuyiNet\Service\RuyiNetGameManifest.cs</Link>
+    </Compile>
     <Compile Include="..\RuyiSDK\RuyiNet\Service\RuyiNetLeaderboardService.cs">
       <Link>RuyiNet\Service\RuyiNetLeaderboardService.cs</Link>
     </Compile>
@@ -107,6 +113,9 @@
     </Compile>
     <Compile Include="..\RuyiSDK\RuyiNet\Service\RuyiNetPartyService.cs">
       <Link>RuyiNet\Service\RuyiNetPartyService.cs</Link>
+    </Compile>
+    <Compile Include="..\RuyiSDK\RuyiNet\Service\RuyiNetPatchService.cs">
+      <Link>RuyiNet\Service\RuyiNetPatchService.cs</Link>
     </Compile>
     <Compile Include="..\RuyiSDK\RuyiNet\Service\RuyiNetProfileService.cs">
       <Link>RuyiNet\Service\RuyiNetProfileService.cs</Link>
