--- a/SDK.Base/SDK.Base.csproj
+++ b/SDK.Base/SDK.Base.csproj
@@ -6,7 +6,7 @@
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\externals\thrift0.10.0\Thrift.ns2.0.csproj" />
+    <ProjectReference Include="..\..\externals\thrift.csharp\Thrift.ns2.0.csproj" />
     <ProjectReference Include="..\RuyiLogger\RuyiLogger.csproj" />
   </ItemGroup>
 
