--- a/ServiceCommon/ServiceCommon.csproj
+++ b/ServiceCommon/ServiceCommon.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\externals\thrift.csharp\Thrift.ns2.0.csproj" />
+    <ProjectReference Include="..\..\externals\thrift.netcore\Thrift.csproj" />
   </ItemGroup>
 
 </Project>
