--- a/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
+++ b/ServiceGenerated.nf2.0/ServiceGenerated.nf2.0.csproj
@@ -79,36 +79,9 @@
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RemovePathMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\RequestMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Speech\File.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\Gamepad.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\GamepadButtonFlags.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\GlobalInputDefineSDKDataTypes.Constants.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\JoystickOffset.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\Key.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\MouseOffset.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiActionActivateEvent.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiControllerKey.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputDeviceType.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputStateGamepad.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputStateJoystick.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputStateKeyboard.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputStateMouse.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputStateRuyiController.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\GlobalInputDefine\RuyiInputStateXB360.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\HttpService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\SubscribeReply.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\Http\SubscribeRequest.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputActionTriggered.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceConnectionChanged.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceEventHeader.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChanged.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChangedGamepad.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChangedJoystick.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChangedKeyboard.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChangedMouse.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChangedRuyiController.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\InputDeviceStateChangedX360.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\RuyiInputEvent.cs" />
-    <Compile Include="GeneratedSync\Ruyi\SDK\InputManager\RuyiInputStateChanged.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\LocalizationService\LanguageChangedMsg.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\LocalizationService\LocalizationService.cs" />
     <Compile Include="GeneratedSync\Ruyi\SDK\MediaService\MediaService.cs" />
@@ -144,7 +117,9 @@
       <Name>Thrift</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GeneratedSync\Ruyi\SDK\InputManager\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\BuildCommon.targets" />
 </Project>
